Single league page. Fixed bug with first row on page wrapping the side menu.

--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -70,6 +70,7 @@ label {cursor: pointer;}
 	font-size: 18px; font-weight: 400; color: $coldGrey;
 	padding-bottom: 8px; margin-bottom: 16px;
 	border-bottom: 1px solid $borderColor;
+	i.fa {font-size: 13px; position: relative; top: -2px;}
 }
 .h6 {
 	font-size: 10px; font-weight: 700; color: $coldGrey;
