--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -8,7 +8,7 @@
 	overflow: hidden;
 	&.admin {padding-left: 5px;}
 }
-#sideMenu {width: 142px; float: left;}
+#sideMenu {width: 142px; position: absolute;}
 #mainBody {padding-left: 147px;}
 .section {position: relative;}
 .section {&.first {margin: 0 0 20px;}}
