--- a/app/scss/_modules.scss
+++ b/app/scss/_modules.scss
@@ -1,4 +1,4 @@
-.container-fluid .row:first-child {overflow: hidden;}
+/*.container-fluid .row:first-child {overflow: hidden;}*/
 .note {
 	@include border-radius(5px);
 	font-size: 11px; 
@@ -255,18 +255,10 @@
 	margin-top: 20px;
 	background-color: #fff;
 	padding: 15px 20px;
-	&.collapsed {
-		.h2 {border-bottom: none; margin: 0; padding: 0;}
-		.inner {display: none;}
-	}
-	&.collapsible {
-		.h2 {
-			i.fa {
-				font-size: 13px; position: relative;
-				top: -2px;
-			}
-		}
-	}
+}
+.collapsed {
+	.h2 {border-bottom: none; margin: 0; padding: 0;}
+	.inner {display: none;}
 }
 .section.noViews {
 	@include border-top-left-radius(0px);
@@ -667,5 +659,111 @@ table.large {
 				}
 			}
 		}
+	}
+}
+.leagueName {
+	position: relative; margin-bottom: 20px;
+	.leagueLogo {
+		margin-bottom: 7px;
+		& + div {color: #808080;}
+	}
+	.seasonSwitch {
+		position: absolute; right: 0; top: 0;
+	}
+}
+.dates {
+	margin-bottom: 10px;
+	table {
+		tbody td:last-child {text-align: right;}
+	}
+}
+.teams {
+	overflow: hidden;
+	.lastGames {
+		overflow: hidden;
+		width: 120px; margin: 0 auto 6px;
+		li {
+			float: left; width: 15%; margin-right: 6%;
+			&:last-child {margin-right: 0;}
+			span {
+				display: block; height: 7px;
+				&.win {background-color: #1db371}
+				&.loss {background-color: #ee5151;}
+				&.draw {background-color: #b4b4b4;}
+				@include border-radius(5px);
+			}
+		}
+	}
+	& > li {
+		float: left;
+		text-align: center;
+		width: 25%; min-height: 185px;
+		@media only screen and (max-width: 1020px) {
+			& {width: 33%;}
+		}
+		a {
+			display: block; width: 120px; margin: 0 auto;
+			div	{
+				height: 120px; border: 1px solid $borderColor;
+				@include single-transition(all, 0.18s);
+				margin-bottom: 12px; padding-top: 20px;
+			}
+			span {font-weight: 700; color: $coldGrey;}
+			@include single-transition(all, 0.3s);
+			position: relative;
+
+			&:active {top: 1px;}
+			&:hover {
+				div {@include box-shadow(#8d8d8d 0 3px 15px);}
+				span {color: $linkColor; text-decoration: underline;}
+			}
+		}
+	}
+}
+.gameList {
+	margin-top: -16px;
+	table {
+		tr:nth-child(odd){background-color: transparent;}
+		a {text-decoration: none;}
+	} 
+	.gameItem {
+		& > a {display: block; padding-top: 3px;}
+		&:nth-child(odd) {background-color: #f5f5f5;}
+	}
+	.date {text-align: center; color: #808080; font-size: 10px; padding-bottom: 0;}
+	.score {
+		td {width: 33.3%; font-weight: 700; padding: 0 0 3px;}
+		td:first-child {text-align: left; padding-left: 20px;}
+		td:last-child {text-align: right; padding-right: 20px;}
+		td:nth-child(2) {font-size: 24px; text-align: center;}
+	}
+	.nav-pills {
+		border-top: 1px solid #dddddd; border-bottom: 1px solid #ddd;
+		li {
+			width: 33.3%; text-align: center; border-right: 1px solid #ddd;
+			&:last-child {border-right: none};
+			& + li {margin-left: 0;}
+			a {
+				padding: 2px 0; color: #808080; font-weight: 700;
+				font-size: 10px; text-transform: uppercase;
+				@include border-radius(0);
+				i {font-size: 13px;}
+			}
+			&.active {
+				a {background-color: transparent; color: #333;}
+			}
+		}
+	}
+}
+.gameTable {
+	margin-top: 3px;
+	th {
+		text-align: center; border-bottom: 1px solid #ddd;
+		font-size: 10px; text-transform: uppercase; padding-bottom: 3px;
+	}
+	td {
+		font-size: 10px;
+		&:first-child {padding-left: 20px;}
+		&:last-child {text-align: right; padding-right: 20px;}
 	}
 }
