--- a/app/scss/_queries.scss
+++ b/app/scss/_queries.scss
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 980px) {
 	.search input {width: 80%;}
-	#mainBody {padding-left: 70px;}
+	#mainBody {padding-left: 55px;}
 	#sideMenu {
 		width: 70px;
 		ul li {
